--- a/100 _EXERCICIOS_IFBA/.vscode/settings.json
+++ b/100 _EXERCICIOS_IFBA/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "EXERCICIO_006.C": "cpp",
         "EXERCICO_014.C": "cpp",
-        "EXERCICiO_014.C": "cpp"
+        "EXERCICiO_014.C": "cpp",
+        "EXeERCICIO_035.C": "cpp"
     }
 }
